fix: fixed product card img from being clipped

--- a/src/components/product-styles.scss
+++ b/src/components/product-styles.scss
@@ -4,6 +4,7 @@
 .product-card-img {
   width: auto;
   height: 24vh;
+  object-fit: cover;
 }
 
 .product-card-title {
